Add date range to followers

--- a/app/components/public_page_component.html.erb
+++ b/app/components/public_page_component.html.erb
@@ -73,7 +73,7 @@
   }
   %>
 
-  <%= render partial:"public_pages/followers_graph", locals: {page_user_name: page_user_name, follower_daily_data_points_for_graph: follower_daily_data_points_for_graph, maximum_days_of_data: maximum_days_of_data} %>
+  <%= render partial:"public_pages/followers_graph", locals: {page_user_name: page_user_name, followers_data_per_day: followers_data_per_day, maximum_days_of_data: maximum_days_of_data} %>
 
   <%= render partial:"public_pages/engagement_rate", locals: {page_user_name: page_user_name, engagement_rate_percentage_per_day: engagement_rate_percentage_per_day, maximum_days_of_data: maximum_days_of_data} %>
 
