Set height for when we have no content

--- a/app/components/shared/metrics_card_component.html.erb
+++ b/app/components/shared/metrics_card_component.html.erb
@@ -1,5 +1,5 @@
 <div class="block w-full md:w-1/2 lg:w-1/4 p-2">
-  <div class="p-6 bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700">
+  <div class="p-6 bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700 min-h-[9rem]">
     <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white flex items-center">
       <%= @title %>
       <% if @tooltip_target.present? %>
