--- a/app/views/public_pages/_impressions_over_time.html.erb
+++ b/app/views/public_pages/_impressions_over_time.html.erb
@@ -1,4 +1,4 @@
-<% tooltip_text = "We collect new impression data each day if your graph isn't showing enough data yet, it's because we are waiting for more data to be available. We will show up to 7 days of data." %>
+<% tooltip_text = "We collect new impression data each day if your graph isn't showing enough data yet, it's because we are waiting for more data to be available." %>
 
 <div class="inline-block w-full dark:bg-gray-900" id="impressions-chart-container">
   <h2 class="mt-4 text-2xl font-bold text-gray-900 dark:text-white flex items-center justify-between">
