--- a/app/views/public_pages/_top_posts.html.erb
+++ b/app/views/public_pages/_top_posts.html.erb
@@ -1,4 +1,4 @@
-<% tooltip_text = "We show the top posts from the last 7 days." %>
+<% tooltip_text = "We show the top posts from the last #{maximum_days_of_data} days." %>
 
 <div class="inline-block w-full dark:bg-gray-900" id="top-posts-container">
   <h2 class="mt-4 text-2xl font-bold text-gray-900 dark:text-white flex items-center justify-between">
