--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -13,14 +13,13 @@
             </li>
             <li class="menu-item">
                 <div class="flex sm:justify-center sm:mt-0">
-                    <a href="https://x.com/EchosightApp" target="_blank" class="text-gray-500 hover:text-gray-900 dark:hover:text-white ms-5">
+                    <a href="https://x.com/EchosightApp" target="_blank">
                         <svg class="w-4 h-4" fill="currentColor" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 17"><path fill-rule="evenodd" d="M20 1.892a8.178 8.178 0 01-2.355.635 4.074 4.074 0 001.8-2.235 8.344 8.344 0 01-2.605.98A4.13 4.13 0 0013.85 0a4.068 4.068 0 00-4.1 4.038 4 4 0 00.105.919A11.705 11.705 0 011.4.734a4.006 4.006 0 001.268 5.392 4.165 4.165 0 01-1.859-.5v.05A4.057 4.057 0 004.1 9.635a4.19 4.19 0 01-1.856.07 4.108 4.108 0 003.831 2.807A8.36 8.36 0 010 14.184 11.732 11.732 0 006.291 16 11.502 11.502 0 0017.964 4.5c0-.177 0-.35-.012-.523A8.143 8.143 0 0020 1.892Z" clip-rule="evenodd"/></svg>
                         <span class="sr-only">Twitter page</span>
                     </a>
+
+                    <!-- <%= @page_updated_at %> -->
                 </div>
-            </li>
-            <li class="mr-4">
-                <%= @page_updated_at %>
             </li>
         </ul>
 
