--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -5,11 +5,11 @@
 
           </span>
           <ul class="flex flex-wrap items-center mt-3 text-sm font-medium text-gray-500 dark:text-gray-400 sm:mt-0">
-            <li class="mr-4">
-                <a href="https://www.echosight.io/privacypolicy" class="hover:underline me-4 md:me-6">Privacy Policy</a>
+            <li class="mr-2">
+                <a href="https://www.echosight.io/privacypolicy">Privacy Policy</a>
             </li>
             <li class="menu-item">
-                <%= link_to 'Echosight News', content_items_path, class: 'hover:underline me-2' %>
+                <%= link_to 'Echosight News', content_items_path %>
             </li>
             <li class="menu-item">
                 <div class="flex sm:justify-center sm:mt-0">
