--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -8,7 +8,7 @@
             <li class="mr-2">
                 <a href="https://www.echosight.io/privacypolicy">Privacy Policy</a>
             </li>
-            <li class="menu-item">
+            <li class="mr-2 menu-item">
                 <%= link_to 'Echosight News', content_items_path %>
             </li>
             <li class="menu-item">
