--- a/app/components/dashboard_component.html.erb
+++ b/app/components/dashboard_component.html.erb
@@ -53,7 +53,9 @@ Yep 1. is perfect
   <%= render Shared::HeadingComponent.new(text: 'Connect to Twitter/X', heading_type: :h2) %>
     <p class="paragraph-base">To start collecting data from Twitter/X to generate your public page, please connect your Twitter/X account.</p>
     <p>
-      <%= button_to helpers.omniauth_authorize_path(:user, :twitter2), data: { turbo: false } do %>
+
+
+      <%= button_to helpers.omniauth_authorize_path(:user, :twitter), data: { turbo: false } do %>
         <button type="submit" class="text-white bg-[#1da1f2] hover:bg-[#1da1f2]/90 focus:ring-4 focus:outline-none focus:ring-[#1da1f2]/50 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center dark:focus:ring-[#1da1f2]/55 me-2 mb-2">
           Connect to <%= t(:twitter_title) %>
         </button>
