--- a/app/components/posts_table_component.html.erb
+++ b/app/components/posts_table_component.html.erb
@@ -1,3 +1,4 @@
+<% if posts.count > 0 %>
 <table class="w-full text-sm text-center text-gray-500 dark:text-gray-400">
         <thead class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
             <tr class="h-12">
@@ -80,3 +81,7 @@
     <div class="flex justify-end mt-2">
         <%= link_to 'echosight.io', root_url, class: 'text-yellow-800 text-xs font-medium px-2.5 py-0.5 rounded dark:text-yellow-300' %>
     </div>
+
+    <% else %>
+    <p class="text-gray-700 dark:text-gray-300">We are awaiting more data to show the table.</p>
+    <% end %>
