--- a/app/views/leaderboard/users.html.erb
+++ b/app/views/leaderboard/users.html.erb
@@ -1,4 +1,4 @@
-<h1 class="text-xl text-gray-900 dark:text-gray-300 p-4">User Leaderboard</h1>
+<%= render Shared::HeadingComponent.new(text: 'User Leaderboard', heading_type: :h1) %>
 
 <ul class="flex flex-wrap text-sm font-medium text-center text-gray-500 border-b border-gray-200 dark:border-gray-700 dark:text-gray-400">
   <li class="mr-2">
