--- a/app/views/leaderboard/users.html.erb
+++ b/app/views/leaderboard/users.html.erb
@@ -1,22 +1,6 @@
 <%= render Shared::HeadingComponent.new(text: 'User Leaderboard', heading_type: :h1) %>
 
-<ul class="flex flex-wrap text-sm font-medium text-center text-gray-500 border-b border-gray-200 dark:border-gray-700 dark:text-gray-400">
-  <li class="mr-2">
-    <%= link_to 'Today', leaderboard_users_path(period: 'today'), class: "inline-block p-4 #{params[:period] == 'today' ? 'text-blue-600 bg-gray-100 rounded-t-lg active dark:bg-gray-800 dark:text-blue-500' : 'rounded-t-lg hover:text-gray-600 hover:bg-gray-50 dark:hover:bg-gray-800 dark:hover:text-gray-300'}" %>
-  </li>
-  <li class="mr-2">
-    <%= link_to 'Last 7 Days', leaderboard_users_path(period: '7_days'), class: "inline-block p-4 #{params[:period].nil? || params[:period] == '7_days' ? 'text-blue-600 bg-gray-100 rounded-t-lg active dark:bg-gray-800 dark:text-blue-500' : 'rounded-t-lg hover:text-gray-600 hover:bg-gray-50 dark:hover:bg-gray-800 dark:hover:text-gray-300'}" %>
-  </li>
-  <li class="mr-2">
-    <%= link_to 'Last 28 Days', leaderboard_users_path(period: '28_days'), class: "inline-block p-4 #{params[:period] == '28_days' ? 'text-blue-600 bg-gray-100 rounded-t-lg active dark:bg-gray-800 dark:text-blue-500' : 'rounded-t-lg hover:text-gray-600 hover:bg-gray-50 dark:hover:bg-gray-800 dark:hover:text-gray-300'}" %>
-  </li>
-  <li class="mr-2">
-    <%= link_to 'Last 3 Months', leaderboard_users_path(period: '3_months'), class: "inline-block p-4 #{params[:period] == '3_months' ? 'text-blue-600 bg-gray-100 rounded-t-lg active dark:bg-gray-800 dark:text-blue-500' : 'rounded-t-lg hover:text-gray-600 hover:bg-gray-50 dark:hover:bg-gray-800 dark:hover:text-gray-300'}" %>
-  </li>
-  <li class="mr-2">
-    <%= link_to 'Last 1 Year', leaderboard_users_path(period: '1_year'), class: "inline-block p-4 #{params[:period] == '1_year' ? 'text-blue-600 bg-gray-100 rounded-t-lg active dark:bg-gray-800 dark:text-blue-500' : 'rounded-t-lg hover:text-gray-600 hover:bg-gray-50 dark:hover:bg-gray-800 dark:hover:text-gray-300'}" %>
-  </li>
-</ul>
+<%= render 'leaderboard_navigation', url_helper: ->(period) { leaderboard_users_path(period: period) } %>
 
 <div class="relative overflow-x-auto shadow-md sm:rounded-lg mt-4">
   <table class="w-full text-sm text-left text-gray-500 dark:text-gray-400">
