--- a/app/views/leaderboard/tweets.html.erb
+++ b/app/views/leaderboard/tweets.html.erb
@@ -1,5 +1,7 @@
 <%= render Shared::HeadingComponent.new(text: 'Tweet Leaderboard', heading_type: :h1) %>
-<%= render 'leaderboard_navigation', url_helper: ->(period) { leaderboard_tweets_path(period: period) } %>
+<div class="flex justify-center items-center">
+  <%= render Shared::DateRangeSelector.new(page_user_handle: page_user_handle, date_range: params[:date_range], url_helper: ->(period) { leaderboard_tweets_path(period: period) }) %>
+</div>
 
 <div class="flex flex-col space-y-4 p-4">
   <div class="overflow-x-auto">
