Add title to analytics page

--- a/app/views/admin/analytics/dashboard.html.erb
+++ b/app/views/admin/analytics/dashboard.html.erb
@@ -1,3 +1,4 @@
+    <%= render Shared::HeadingComponent.new(text: 'Campaign Analytics', heading_type: :h1) %>
 <div id="campaign_sign_ups_chart"></div>
 
     <script>
