Add price to landing page

--- a/app/views/pages/landing.html.erb
+++ b/app/views/pages/landing.html.erb
@@ -1,6 +1,19 @@
 <div class="text-center py-8 bg-gray-100 dark:bg-gray-900">
   <h1 class="text-3xl font-bold text-gray-900 dark:text-gray-300 mb-4">Revolutionize Your Social Media Strategy with Echosight</h1>
   <p class="text-xl text-gray-700 dark:text-gray-400 mb-8">Showcase your Twitter/X analytics with ease and compare yourself within the community.</p>
+
+  <div class="text-center mb-8">
+    <p class="text-xl text-gray-700 dark:text-gray-400 mb-4">
+      Unlock all features for the price of a coffee $5 USD / month
+    </p>
+    <%
+=begin%>
+ <p class="text-xl text-gray-700 dark:text-gray-400 mb-4">
+      Invest in your social media growth for less than 17 cents a day
+    </p>
+<%
+=end%>
+  </div>
   <%= render Shared::ButtonComponent.new(text: "Sign Up Now", url: new_user_registration_path, method: :get) %>
 </div>
 
