Add link to demo page

--- a/app/views/pages/landing.html.erb
+++ b/app/views/pages/landing.html.erb
@@ -86,6 +86,7 @@
 
     <div class="text-center">
       <%= render Shared::ButtonComponent.new(text: "Get Started", url: new_user_registration_path, method: :get) %>
+      <p class="mt-4 text-gray-500 dark:text-gray-400">Unsure? <a href="/p/demo" class="text-blue-600 dark:text-blue-400">Check out our demo page</a></p>
     </div>
   </div>
 </div>
