--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -4,9 +4,12 @@
           <span class="text-sm text-gray-500 sm:text-center dark:text-gray-400">&copy; 2023<% if Time.now.year > 2023 %> - <%= Time.now.year %><% end %> <a href="<%= root_url %>" class="hover:underline" target="_blank">Echosight.io</a>. All rights reserved.<br>
 
           </span>
-          <ul class="flex flex-wrap items-center mt-3 text-sm font-medium text-gray-500 dark:text-gray-400 sm:mt-0">
+          <ul class="flex flex-wrap items-center mb-6 text-sm font-medium text-gray-500 sm:mb-0 dark:text-gray-400">
             <li class="mr-2">
-                <a href="https://www.echosight.io/privacypolicy">Privacy Policy</a>
+              <%= link_to('Leaderboard', leaderboard_path) %>
+            </li>
+            <li class="mr-2">
+                <%= link_to('Privacy Policy','https://www.echosight.io/privacypolicy') %>
             </li>
             <li class="mr-2 menu-item">
                 <%= link_to 'Echosight News', content_items_path %>
