--- a/app/components/public_page_component.html.erb
+++ b/app/components/public_page_component.html.erb
@@ -1,14 +1,5 @@
   <% content_for :title, "#{page_user_name || page_user_handle}'s Public Page" %>
 
-  <%= content_for :profile_container do %>
-  <div class="profile-container">
-    <div class="flex items-center space-x-3">
-        <%= render PrimaryActionButtonComponent.new(user: current_user) %>
-        <%= render 'shared/dark_mode_toggle_button' %>
-    </div>
-  </div>
-  <% end %>
-
   <div class="relative">
     <!-- Header Photo -->
     <% if hide_profile_banner? %>
@@ -59,7 +50,11 @@
 
   <% if show_date_range_selector? %>
   <div class="flex justify-center items-center">
-    <%= render Shared::DateRangeSelector.new(page_user_handle: page_user_handle, date_range: params[:date_range]) %>
+    <%= render Shared::DateRangeSelector.new(
+      page_user_handle: page_user_handle,
+      date_range: params[:date_range],
+      url_helper: ->(date_range) { public_page_path(handle: @page_user.handle, date_range: date_range) }
+      ) %>
   </div>
   <% end %>
 
